# textsynth

./: .readthedocs.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml
docs/: conf.py  index.rst  introduction.rst  reference.rst
textsynth/: __init__.py  client.py  engine.py
